--- a/index.html
+++ b/index.html
@@ -14,41 +14,49 @@
   <body>
     <!-- Header section -->
     <header>
+      <div class="flex-container align-vertical-center">
       <h1>Pete Thinkful | Artist</h1>
       <nav>
         <a href="#about">About</a>
         <a href="#portfolio">Portfolio</a>
         <a href="#contact">Contact</a>
       </nav>
+    </div>
     </header>
 
     <main>
       <div>
         <!-- About section -->
         <article id="about">
+          <!-- title -->
           <h2>About</h2>
-          <section>
-            <h3>Hi! I'm Pete Thinkful</h3>
-            <div>
-              <img
-                class="image-circle"
-                src="images/pete-thinkful.png"
-                alt="Pete Thinkful"
-              />
-            </div>
-            <p>I'm an artist living in Denver, Colorado.</p>
-            <p>As an artist, I'm interested in:</p>
-            <ul>
-              <li>Producing abstract art</li>
-              <li>Creating street graffiti art</li>
-              <li>Connecting with like-minded artists</li>
-            </ul>
-            <p>
-              Please feel free to take a look at my website and feel free to
-              <a href="#contact">contact me</a>.
-            </p>
+          <section class="flex-container align-vertical-center">
+              <!-- profile picture -->
+              <div class="flex-item">
+                <img
+                  class="image-circle"
+                  src="images/pete-thinkful.png"
+                  alt="Pete Thinkful"
+                />
+              </div>
+              <!-- presentation message -->
+              <section class="flex-item">
+                <h3>Hi! I'm Pete Thinkful</h3>
+                <p>I'm an artist living in Denver, Colorado.</p>
+                <p>As an artist, I'm interested in:</p>
+                <ul>
+                  <li>Producing abstract art</li>
+                  <li>Creating street graffiti art</li>
+                  <li>Connecting with like-minded artists</li>
+                </ul>
+                <p>
+                  Please feel free to take a look at my website and feel free to
+                  <a href="#contact">contact me</a>.
+                </p>
+              </section>
           </section>
 
+          <!-- background section -->
           <section>
             <h3>Pete's Background</h3>
             <p>
@@ -69,38 +77,52 @@
         <!-- Portfolio section -->
         <article id="portfolio">
           <h2>Portfolio</h2>
-          <section>
-            <h3>Abstract Red</h3>
-            <div>
-              <img src="images/abstract-red.png" alt="Abstract Red" />
-            </div>
-            <p>
-              Vaporware wayfarers heirloom neutra disrupt. Activated charcoal
-              waistcoat scenester hell of.
-            </p>
-          </section>
+          <div class="flex-container">
+            <!-- project -->
+            <section class="flex-item">
+              <!-- project title -->
+              <h3>Abstract Red</h3>
+              <!-- project image -->
+              <div>
+                <img src="images/abstract-red.png" alt="Abstract Red" />
+              </div>
+              <!-- project description -->
+              <p class="project-description">
+                Vaporware wayfarers heirloom neutra disrupt. Activated charcoal
+                waistcoat scenester hell of.
+              </p>
+            </section>
 
-          <section>
-            <h3>Spiral Zany</h3>
-            <div>
-              <img src="images/spiral-zany.png" alt="Spiral Zany" />
-            </div>
-            <p>
-              Sriracha portland taxidermy cronut messenger bag, vegan
-              distillery. Vaporware kickstarter air plant mumblecore food truck.
-            </p>
-          </section>
+            <!-- project -->
+            <section class="flex-item">
+              <!-- project title -->
+              <h3>Spiral Zany</h3>
+              <!-- project image -->
+              <div>
+                <img src="images/spiral-zany.png" alt="Spiral Zany" />
+              </div>
+              <!-- project description -->
+              <p class="project-description">
+                Sriracha portland taxidermy cronut messenger bag, vegan
+                distillery. Vaporware kickstarter air plant mumblecore food truck.
+              </p>
+            </section>
 
-          <section>
-            <h3>Melted Rainbow</h3>
-            <div>
-              <img src="images/melted-rainbow.png" alt="Melted Rainbow" />
-            </div>
-            <p>
-              Edison bulb single-origin coffee snackwave, actually ennui
-              locavore shabby chic forage.
-            </p>
-          </section>
+            <!-- project -->
+            <section class="flex-item">
+              <!-- project title -->
+              <h3>Melted Rainbow</h3>
+              <!-- project image -->
+              <div>
+                <img src="images/melted-rainbow.png" alt="Melted Rainbow" />
+              </div>
+              <!-- project description -->
+              <p class="project-description">
+                Edison bulb single-origin coffee snackwave, actually ennui
+                locavore shabby chic forage.
+              </p>
+            </section>
+          </div>
         </article>
 
         <hr />
