html refactor using recommendations from Nu HTML Checker

--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Pete Thinkful</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-    />
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    >
+    <link href="style.css" rel="stylesheet" type="text/css" >
   </head>
   <body>
     <!-- Header section -->
@@ -30,14 +30,14 @@
         <article id="about">
           <!-- title -->
           <h2>About</h2>
-          <section class="flex-container align-vertical-center">
+          <div class="flex-container align-vertical-center align-left">
               <!-- profile picture -->
               <div class="flex-item">
                 <img
                   class="image-circle"
                   src="images/pete-thinkful.png"
                   alt="Pete Thinkful"
-                />
+                >
               </div>
               <!-- presentation message -->
               <section class="flex-item">
@@ -54,7 +54,7 @@
                   <a href="#contact">contact me</a>.
                 </p>
               </section>
-          </section>
+            </div>
 
           <!-- background section -->
           <section>
@@ -72,7 +72,7 @@
           </section>
         </article>
 
-        <hr />
+        <hr>
 
         <!-- Portfolio section -->
         <article id="portfolio">
@@ -84,7 +84,7 @@
               <h3>Abstract Red</h3>
               <!-- project image -->
               <div>
-                <img src="images/abstract-red.png" alt="Abstract Red" />
+                <img src="images/abstract-red.png" alt="Abstract Red" >
               </div>
               <!-- project description -->
               <p class="project-description">
@@ -99,7 +99,7 @@
               <h3>Spiral Zany</h3>
               <!-- project image -->
               <div>
-                <img src="images/spiral-zany.png" alt="Spiral Zany" />
+                <img src="images/spiral-zany.png" alt="Spiral Zany" >
               </div>
               <!-- project description -->
               <p class="project-description">
@@ -114,7 +114,7 @@
               <h3>Melted Rainbow</h3>
               <!-- project image -->
               <div>
-                <img src="images/melted-rainbow.png" alt="Melted Rainbow" />
+                <img src="images/melted-rainbow.png" alt="Melted Rainbow" >
               </div>
               <!-- project description -->
               <p class="project-description">
@@ -125,7 +125,7 @@
           </div>
         </article>
 
-        <hr />
+        <hr >
 
         <!-- Contact section -->
         <article id="contact">
